added resume editior and suguestion html page

--- a/analyzer/templates/home.html
+++ b/analyzer/templates/home.html
@@ -62,6 +62,7 @@
             <div class="hero-subtitle">Get instant, AI-powered feedback on your resume.<br>Boost your chances of landing your dream job!</div>
             <!-- Login/Register buttons removed from hero, now in navbar -->
             <a href="{% url 'analyze' %}" class="btn btn-light btn-analyze shadow">Analyze My Resume</a>
+            <a href="{% url 'resume_edit' %}" class="btn btn-warning btn-analyze shadow mt-3">Resume Edit & Suggestions</a>
         </div>
         <div class="row mt-5">
             <div class="col-md-4 text-center">
